--- a/members-only/views/index.pug
+++ b/members-only/views/index.pug
@@ -2,4 +2,20 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  if user
+    if user.membership_status='Public' 
+      .hero 
+        p Welcome Back #{user.first_name}!
+        p If you would like to become a private member to view who wrote which message please enter the passcode below.
+    else if user.membership_status='Private'
+      .hero
+        p Welcome Back #{user.first_name}!
+        p Thank you for being a private member! If you are also an admin please enter the passcode below.
+    else if user.membership_status='Admin'
+      .hero
+        p Welcome Back #{user.first_name}!
+        p You are an admin of this site. Please do not abuse your privileges. Thank you and have fun! 
+  else 
+    .hero
+      p Welcome to the Message Board!
+      p This is a demo site made with Express. If you would like to view and write messages please Login or Signup
