--- a/members-only/views/layout.pug
+++ b/members-only/views/layout.pug
@@ -1,7 +1,24 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    nav 
+      block header 
+        ul 
+          li 
+            a(href='/') Home
+          li 
+            a(href='/messageboard') MessageBoard
+          if user 
+            li 
+              a(href='/log_out') Log Out 
+          else 
+            li
+              a(href='/log_in') Login 
+            li 
+              a(href='/sign_up') Sign Up
+      block content
