--- a/members-only/views/layout.pug
+++ b/members-only/views/layout.pug
@@ -18,7 +18,7 @@ html(lang='en')
               a(href='/log_out') Log Out 
           else 
             li
-              a(href='/log_in') Login 
+              a(href='/login') Login 
             li 
               a(href='/sign_up') Sign Up
       block content
