--- a/members-only/views/layout.pug
+++ b/members-only/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='en')
             a(href='/') Home
           li 
             a(href='/messageboard') MessageBoard
-          if user 
+          if currentUser 
             li 
               a(href='/log_out') Log Out 
           else 
