--- a/members-only/views/sign-up-form.pug
+++ b/members-only/views/sign-up-form.pug
@@ -7,10 +7,10 @@ block content
     form(action='' method='POST')
         .form-group 
             label(for='first-name') First Name:
-            input#first-name(type='text' placeholder='First Name' name='first_name' required='true')
+            input#first-name(type='text' placeholder='First Name' name='first_name' required='true' value=(undefined===user ? '' : user.first_name))
         .form-group 
             label(for='last-name') Last Name:
-            input#last-name(type='text' placeholder='Last Name' name='last_name' required='true')
+            input#last-name(type='text' placeholder='Last Name' name='last_name' required='true' value=(undefined===user ? '' : user.last_name))
         .form-group 
             label(for='email') Email:
             input#email(type='email' placeholder='Email' name='email' required='true')
@@ -24,3 +24,8 @@ block content
             label(for='confirm-password') Confirm Password
             input#confirm-password(name='confirm-password' type='password' required='true')
         button.btn.btn-submit Sign Up
+    
+    if errors
+        ul 
+            for error in errors 
+                li!= error.msg
