--- a/members-only/views/index.pug
+++ b/members-only/views/index.pug
@@ -6,19 +6,11 @@ block content
     if currentUser.membership_status='Public' 
       .hero 
         p Welcome Back #{currentUser.username}!
-        p If you would like to become a private member to view who wrote which message please enter the passcode below.
-      form(method="POST" action='')
-        .form-group 
-          label(for='private-passcode') Passcode: 
-          input#private-passcode(type='text' name='private-passcode' placeholder='Passcode to be Private Member')
+        p If you would like to see which user posted which message please become a private member. You can do so by entering the correct passcode by following the link above.
     else if currentUser.membership_status='Private'
       .hero
         p Welcome Back #{currentUser.username}!
-        p Thank you for being a private member! If you are also an admin please enter the passcode below.
-        form(method="POST" action='')
-        .form-group 
-          label(for='admin-passcode') Passcode: 
-          input#admin-passcode(type='text' name='admin-passcode' placeholder='Passcode to be an Admin')
+        p Thank you for being a private member! If you would like to have admin privileges, you will need to enter the correct passcode by following the link above.
     else if currentUser.membership_status='Admin'
       .hero
         p Welcome Back #{currentUser.username}!
